fix z-index

--- a/blocks/section-subtitle/section-subtitle.css
+++ b/blocks/section-subtitle/section-subtitle.css
@@ -6,4 +6,5 @@
   font-weight: normal;
   text-align: center;
   align-content: center;
+  z-index: 1;
 }
