--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -6,4 +6,5 @@
   font-weight: bold;
   text-align: center;
   align-content: center;
+  z-index: 1;
 }
